--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&family=Montserrat:wght@300;400;700&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -88,5 +88,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>
+        created by <a href="https://orlandomm.me">Orlando Mina</a> -
+        devChallenges.io
+      </p>
+    </footer>
   </body>
 </html>
