--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     <footer>
       <p>
-        created by <a href="https://orlandomm.me">Orlando Mina</a> -
+        created by <a href="https://orlandomm.net">Orlando Mina</a> -
         devChallenges.io
       </p>
     </footer>
